@@ -18,7 +18,7 @@ jobs:
         os:
           - windows-latest
           - windows-2019
-        perl: ['5.34', '5.32', '5.30', '5.28']
+        perl: ['5.32', '5.30', '5.28']
     name: Perl ${{ matrix.perl }} on ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
